# learn-agentic-ai

./: .gitignore  chain_reducer  hello.py  pyproject.toml  requirements.txt
data/: data.txt
langchain/: hello.py  langchain_tools.py  memory.py  rag.py  ragapp.py
langgraph/: 3_router.ipynb  chain_reducer.ipynb  hello.py  router.ipynb  state.py
langgraph/module-1/: 3-router.py  3_router.ipynb  4_agent.ipynb  4_reAct_agent.py  5_agent_memory.py  chain_reducer.py  hello.py  router.ipynb  state.py
langgraph/module-2/: 1_state_schema.ipynb
